Add parts of php7.3 and likely comming sections

--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
                     data-background-size="10%"
                     data-background-color="#ffffff"
                     data-background-repeat="no-repeat"
-                    data-background-position="top 5% right 5%"
-                    data-separator-vertical="^\n--\n$">
+                    data-background-position="top 5% right 5%">
                     <h1>PHP 7.2. Done.</h1>
                     <h2>What's next?</h2>
                 </section>
 
                 <section id="whoami" data-markdown="sections/whoami.md"></section>
+
+                <section id="php73" data-markdown="sections/php73.md" data-separator-vertical="^\n--\n$"></section>
+
+                <section id="likely" data-markdown="sections/likely-coming.md" data-separator-vertical="^\n--\n$"></section>
 			</div>
 		</div>
 
