Add Lokely, hardly sections, closures and jit barebones

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <section id="php73" data-markdown="sections/php73.md" data-separator-vertical="^\n--\n$"></section>
 
                 <section id="likely" data-markdown="sections/likely-coming.md" data-separator-vertical="^\n--\n$"></section>
+
+                <section id="hardly" data-markdown="sections/hardly-possible.md" data-separator-vertical="^\n--\n$"></section>
+
+                <section id="closures" data-markdown="sections/closures.md" data-separator-vertical="^\n--\n$"></section>
+
+                <section id="jit" data-markdown="sections/jit.md" data-separator-vertical="^\n--\n$"></section>
 			</div>
 		</div>
 
