Finish Generics and JIT

--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
 
                 <section id="hardly" data-markdown="sections/hardly-possible.md" data-separator-vertical="^\n--\n$"></section>
 
-                <section id="closures" data-markdown="sections/closures.md" data-separator-vertical="^\n--\n$"></section>
+                <section id="closures" data-markdown="sections/generics.md" data-separator-vertical="^\n--\n$"></section>
 
                 <section id="jit" data-markdown="sections/jit.md" data-separator-vertical="^\n--\n$"></section>
+
+                <section id="questions">
+                    <h2>Questions?</h2>
+                </section>
+
+                <section id="thanks">
+                    <h2>Thank you!</h2>
+                </section>
 			</div>
 		</div>
 
